tests/stacks/ibm/components/tektoncd/test_data/expected/apps_v1_deployment_tekton-pipelines-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: tekton-pipelines-webhook
    app.kubernetes.io/version: v0.14.0
    pipeline.tekton.dev/release: v0.14.0
    version: v0.14.0
  name: tekton-pipelines-webhook
  namespace: tekton-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: tekton-pipelines-webhook
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
      labels:
        app: tekton-pipelines-webhook
        app.kubernetes.io/component: tekton-pipelines-webhook
        app.kubernetes.io/version: v0.14.0
        pipeline.tekton.dev/release: v0.14.0
        version: v0.14.0
    spec:
      containers:
      - env:
        - name: SYSTEM_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CONFIG_LOGGING_NAME
          value: config-logging
        - name: CONFIG_OBSERVABILITY_NAME
          value: config-observability
        - name: CONFIG_LEADERELECTION_NAME
          value: config-leader-election
        - name: WEBHOOK_SERVICE_NAME
          value: tekton-pipelines-webhook
        - name: WEBHOOK_SECRET_NAME
          value: webhook-certs
        - name: METRICS_DOMAIN
          value: tekton.dev/pipeline
        image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/webhook:v0.14.0@sha256:b1d98165d35e4964165364b922f402ebdfb0a929becf7f7ba3214258bf3f0249
        name: webhook
        ports:
        - containerPort: 9090
          name: metrics
        - containerPort: 8008
          name: profiling
        - containerPort: 8443
          name: https-webhook
        securityContext:
          allowPrivilegeEscalation: false
      serviceAccountName: tekton-pipelines-webhook
