tests/stacks/ibm/components/tektoncd/test_data/expected/rbac.authorization.k8s.io_v1_clusterrole_tekton-dashboard-extensions.yaml
aggregationRule:
  clusterRoleSelectors:
  - matchLabels:
      rbac.dashboard.tekton.dev/aggregate-to-dashboard: "true"
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: tekton-dashboard
  name: tekton-dashboard-extensions
