tests/stacks/ibm/components/tektoncd/test_data/expected/~g_v1_service_tekton-pipelines-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-pipelines-controller
    app.kubernetes.io/component: tekton-pipelines-controller
    app.kubernetes.io/version: v0.14.0
    pipeline.tekton.dev/release: v0.14.0
    version: v0.14.0
  name: tekton-pipelines-controller
  namespace: tekton-pipelines
spec:
  ports:
  - name: http-metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/component: tekton-pipelines-controller
