tests/stacks/ibm/components/tektoncd/test_data/expected/~g_v1_service_tekton-pipelines-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tekton-pipelines-webhook
    app.kubernetes.io/component: tekton-pipelines-webhook
    app.kubernetes.io/version: v0.14.0
    pipeline.tekton.dev/release: v0.14.0
    version: v0.14.0
  name: tekton-pipelines-webhook
  namespace: tekton-pipelines
spec:
  ports:
  - name: http-metrics
    port: 9090
    targetPort: 9090
  - name: http-profiling
    port: 8008
    targetPort: 8008
  - name: https-webhook
    port: 443
    targetPort: 8443
  selector:
    app.kubernetes.io/component: tekton-pipelines-webhook
